--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
+    "axios": "^1.2.0",
     "bootstrap": "^5.2.2",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.2",
@@ -24,6 +25,7 @@
     "react-dom": "18.2.0",
     "react-toastify": "^9.1.1",
     "rxjs": "^7.5.7",
+    "swr": "^1.3.0",
     "typescript": "4.8.4"
   }
 }
